# django-blog-template

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/templates/: pagination.html
blog/templates/blog/: base.html
blog/templates/blog/post/: list.html
mysite/: settings.py  urls.py
