[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.isort]
force-single-line = true
order-by-type = false

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Sergey Fomin <PivoWar89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pre-commit = "^3.0.4"
ruff = "^0.0.254"
vulture = "^2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
